--- a/assignment3.html
+++ b/assignment3.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="bootstrap.css">
 	<link rel="stylesheet" href="bootstrap-theme.css">
-	<link rel="stylesheet" href="bootstrap.min.css">
+
 
 	
 	<title> Assignment for Module 3 </title>
@@ -86,9 +86,9 @@ Sushi is sometimes confused with sashimi, a related dish in Japanese cuisine tha
 		</div>
 	</div>
 
-	<script src="js/jquery-2.1.4.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/script.js"></script>
+	<script src="jquery-2.1.4.min.js"></script>
+	<script src="bootstrap.min.js"></script>
+	<script src="script.js"></script>
 </body>
 </html>
 
