--- a/assignment3.html
+++ b/assignment3.html
@@ -20,7 +20,7 @@
 					<div class="navbar-brand">
 						<p class="nav-brand"> Yugal's Restaurant</p>
 					</div>
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="collapsable-nav" aria-expanded="true">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="collapsable-nav" area-expanded="true">
 						<span class="sr-only"> Toggle navigation </span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
